typescript/checker/tests/conformance/decorators/invalid/decoratorOnInternalModule.ts.stderr
error: Unexpected token Some(At)
 --> $DIR/tests/conformance/decorators/invalid/decoratorOnInternalModule.ts:3:1
  |
3 | @dec
  | ^

